add responsive design

--- a/post.html
+++ b/post.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8" name="viewport" content="width=1050">
 	<title>Palo Alto</title>
-	<link rel="stylesheet" href="include/styles/main_style.css" media="screen and (min-width: 1050px)">
+	<link rel="stylesheet" href="include/styles/main_style.css">
 	<link rel="stylesheet" href="include/styles/post_style.css">
+	<link rel="stylesheet" href="include/styles/pda_style.css" media="screen and (max-width: 1023px)">
+	<link rel="stylesheet" href="include/styles/mobile_style.css" media="screen and (max-width: 767px)">
 </head>
 <body>
 	<header>
